# spdx-dataset

./: .gitmodules  Cargo.toml  LICENSE  build.rs
src/: lib.rs  spdx_json.rs  spdx_text.rs
