[package]
name = "spdx-dataset"
description = "a library of SPDX-recognized licenses and related metadata"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
authors = ["Will Page <compenguy@gmail.com>"]
exclude = [
	"/modules/**/*",
]

[dependencies]
lazy_static = "1.3"
log = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", optional = true }

[build-dependencies]
# Used for fingerprinting the dataset, so clients can safely cache data and
# be able to tell when that cache needs to be invalidated
sha2 = "0.8"
